--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,33 +1,17 @@
-trigger:
-- master
+name: .NET Core
 
-pool:
-  vmImage: 'vs2017-win2016'
+on: [push]
 
-variables:
-  buildConfiguration: 'Release'
+jobs:
+  build:
 
-steps:
-- task: DotNetCoreInstaller@0
-  displayName: 'Installing .NET Core SDK...'
-  inputs:
-    version: 3.0.100
+    runs-on: ubuntu-latest
 
-- task: NuGetToolInstaller@0
-  displayName: 'Installing Nuget Tools...'
-  inputs:
-    versionSpec: '4.9.2'
-
-- script: dotnet build --configuration $(buildConfiguration) src/LiquidTechnologies.Blazor.ModalDialog/LiquidTechnologies.Blazor.ModalDialog.csproj
-  displayName: 'Building $(buildConfiguration)...'
-
-- task: DotNetCoreCLI@2
-  displayName: 'Generating Nuget Package... '
-  inputs:
-    command: pack
-    arguments: --no-build
-    packagesToPack: src/LiquidTechnologies.Blazor.ModalDialog/LiquidTechnologies.Blazor.ModalDialog.csproj
-    configuration: $(buildConfiguration)
-
-- task: PublishBuildArtifacts@1
-  displayName: 'Publishing Build Artifacts...'
+    steps:
+    - uses: actions/checkout@v1
+    - name: Setup .NET Core
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: 2.2.108
+    - name: Build with dotnet
+      run: dotnet build --configuration Release
