--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,3 +19,7 @@ jobs:
       run: |  
         cd src/LiquidTechnologies.Blazor.ModalDialog
         dotnet pack -c Release -o out
+    - name: Publish Nuget to GitHub registry
+      run: dotnet nuget push .\src\LiquidTechnologies.Blazor.ModalDialog\out\*.nupkg --api-key $NUGET_API_KEY --source https://www.nuget.org/api/v2/package
+      env:
+        NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}         
