--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,4 @@ jobs:
         cd src/LiquidTechnologies.Blazor.ModalDialog
         dotnet pack -c Release -o out
     - name: Publish Nuget to GitHub registry
-      run: dotnet nuget push .\src\LiquidTechnologies.Blazor.ModalDialog\out\*.nupkg --api-key $NUGET_API_KEY --source https://www.nuget.org/api/v2/package
-      env:
-        NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}         
+      run: dotnet nuget push .\src\LiquidTechnologies.Blazor.ModalDialog\out\*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://www.nuget.org/api/v2/package
